--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -3,39 +3,20 @@ $article-mobile-width: 89%;
 $article-width: 60vw;
 $desktop-viewport: 42rem;
 
-// COLOR
-$black-0: #000;
-$black-10: #161616;
+// BACKGROUND
+$black-b: #000;
+$white-b: #fff;
 
 
-$gray-dark-0: #3f3c45;
-$gray-light-0: #9c94ac;
+
+// Risk-PROFILE COLOR THEME
+$red: #FF1313;
+$white: #fff;
+$blue: #0066FF;
+$darkblue: #0500FF;
+$pink: #FF11D9;
+$yellow: #FFD600;
+$green: #00FF29;
+$lightblack: #2E2C2C;
 
 
-// DRACULA COLOR THEME - https://draculatheme.com/
-$very-dark-gray: #282a36; // Background
-$dark-gray: hsla(220, 100%, 80%, .08); // Current Line & Selection
-$gray: #666666;
-$light-gray: #999999;
-$very-light-gray: #f8f8f2; // Foreground
-$blue: #6272a4; // Comment
-
-$cyan-lite: #bbf3ff;
-$cyan: #8be9fd;
-$soft-cyan: #66d9ef;
-$green: #50fa7b;
-$green-lite: #82fba0;
-$orange: #ffb86c;
-$deep-orange: #f7a349;
-$pink: #ff79c6;
-$pink-dark: #ff46b0;
-$purple: #bd93f9;
-$dark-purple: #383a59;
-$red: #ff5555;
-$yellow: #f1fa8c;
-$dark-yellow: #E6DB74;
-$sandstone: #cfcfc2;
-
-$lace: #f8f8f0;
-$white: #ffffff;
-$black: #000000;
