--- a/scss/pages/_guide.scss
+++ b/scss/pages/_guide.scss
@@ -1,124 +1,3 @@
 @import '../config/variables';
-@import '../config/mixins';
+@import '../config/media';
 
-.guide {
-  display: flex;
-  flex-direction: column;
-  width: $article-mobile-width;
-
-  @include desktop {
-    width: $article-width;
-  }
-
-  h1 {
-    font-weight: 500;
-  }
-
-  p {
-    font-size: 2rem;
-    font-weight: 300;
-  }
-
-  a {
-    text-decoration: underline;
-
-    color: $sandstone;
-
-    transition: color .25s ease-in-out;
-
-    &:hover,
-    &:focus {
-      color: $deep-orange;
-    }
-  }
-}
-
-.toc {
-  font-size: 2rem;
-
-  h3 {
-    padding: 0;
-  }
-
-
-  &__chapter {
-    display: grid;
-    grid-template-areas: 'title' 'description' 'details';
-    grid-template-columns: max-content;
-    grid-template-rows: 10rem max-content;
-    align-items: center;
-
-    padding: 1rem 0;
-
-    &:nth-last-child(n+2) {
-      border-bottom: solid .5rem $sandstone;
-    }
-
-    @include desktop {
-      padding: 4rem 0;
-    }
-
-  }
-
-  &__chapter-title {
-    grid-area: title;
-    display: grid;
-    grid-template-columns: 1rem max-content;
-
-    @include desktop {
-      grid-template-columns: 10rem max-content;
-    }
-  }
-
-  &__chapter-number {
-    font-size: 2rem;
-    font-weight: 300;
-
-
-    @include desktop {
-      font-size: 8rem;
-      font-weight: 300;
-    }
-
-  }
-
-  &__chapter-description {
-    color: $soft-cyan;
-  }
-
-  &__chapter-name {
-    padding: 0 0 0 2rem;
-
-
-    font-size: 2rem;
-    font-weight: 300;
-
-    @include desktop {
-      font-size: 8rem;
-    }
-
-  }
-  &__chapter-sections {
-    grid-area: details;
-    display: grid;
-
-    padding: 0;
-
-    min-height: 10rem;
-
-    @include desktop {
-      padding: 2rem 0;
-      min-height: auto;
-    }
-  }
-  &__chapter-sections-item {
-
-  }
-
-  &__chapter-sections-item-section {
-    em {
-      font-weight: 300;
-      font-style: normal;
-    }
-  }
-}
