--- a/scss/pages/_resources.scss
+++ b/scss/pages/_resources.scss
@@ -1,72 +1,2 @@
 @import '../config/variables';
-
-.resources {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: -3rem 0;
-
-  p {
-    font-size: 2rem;
-  }
-
-  a {
-    text-decoration: underline;
-
-    color: $very-light-gray;
-
-    transition: color .25s ease-in-out;
-
-    &:hover,
-    &:focus {
-      color: $deep-orange;
-    }
-  }
-
-
-
-  &__section {
-    display: grid;
-    grid-template-areas: "header" "content";
-    grid-template-rows: 10vh 90vh;
-
-    width: 100%;
-
-    font-size: 2rem;
-    height: 100vh;
-
-    &:nth-child(even) {
-      background-color: #ff5555;
-
-      h2 {
-        color: $orange;
-      }
-    }
-
-  }
-
-  &__section-content {
-    display: flex;
-    flex-direction: column;
-    width: $article-mobile-width;
-    margin: 0 auto;
-
-    @include desktop {
-      width: $article-width;
-    }
-
-    h2 {
-      padding: 10rem 0 .1rem 0;
-      font-size: 8vh;
-    }
-
-    ul {
-      padding: 2rem 0;
-      list-style-type: disc;
-    }
-    li {
-      padding: .5rem;
-      font-weight: 300;
-    }
-  }
-}
+@import '../config/media';
