--- a/views/index.html
+++ b/views/index.html
@@ -1,175 +1,142 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Barba.js Guide</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible">
+    <title>Risk Profile</title>
 
-  <link rel="stylesheet" href="css/styles.css">
 
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap-grid.min.css" rel="stylesheet"
+          crossorigin="anonymous">
+    <!-- style -->
+    <link rel="stylesheet" href="css/styles.css">
 
-  <link rel="preload" href="fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/Inter-Medium.woff2" as="font" type="font/woff2" crossorigin>
 
-  <style>
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Thin.woff2') format('woff2'), url('fonts/Inter-Thin.woff') format('woff');
-      font-display: swap;
-      font-weight: 100;
-    }
+    <!-- load jquery for kairos -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- load face api -->
+    <script defer src="js/face-api.min.js"></script>
+    <!-- load kairos api -->
+    <script src="js/kairos.js"></script>
 
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Light.woff2') format('woff2'), url('fonts/Inter-Light.woff') format('woff');
-      font-display: swap;
-      font-weight: 300;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Regular.woff2') format('woff2'), url('fonts/Inter-Regular.woff') format('woff');
-      font-display: swap;
-      font-weight: 500;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Medium.woff2') format('woff2'), url('fonts/Inter-Medium.woff') format('woff');
-      font-display: swap;
-      font-weight: 600;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Bold.woff2') format('woff2'), url('fonts/Inter-Bold.woff') format('woff');
-      font-display: swap;
-      font-weight: 700;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-ExtraBold.woff2') format('woff2'), url('fonts/Inter-ExtraBold.woff') format('woff');
-      font-display: swap;
-      font-weight: 800;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Black.woff2') format('woff2'), url('fonts/Inter-Black.woff') format('woff');
-      font-display: swap;
-      font-weight: 900;
-    }
-  </style>
 </head>
 
-<body>
-  <header class="header">
-    <section class="github-button-section">
-      <a class="github-button" href="https://github.com/telagraphic/page-transitions" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star telagraphic/page-transitions on GitHub">Star</a>
-      <a class="docs" href="https://barba.js.org/docs/getstarted/intro/" target="_blank">Docs</a>
-    </section>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="guide.html">Guide</a>
-      <a href="resources.html">Resources</a>
-    </nav>
-  </header>
 
-  <section data-barba="wrapper">
-    <main data-barba="container" data-barba-namespace="index" data-title="Intro">
-      <article class="index page">
-        <header>
-          <h1>Barba.js 101</h1>
-        </header>
+<body data-barba="wrapper">
 
-        <section class="index__section">
-          <p>
-            It can be confusing getting started with <b>Barba.js</b> and this guide is meant to help
-            clarify and explain how to set up page transitions for the novice/beginner.
-            The guide is a git repo that you can clone/download to your
-            machine and follow along by checking out a branch and running the code with a live server.
-            I think seeing the code in use and being able to change it will help demonstrate how to use
-            the great features of <b>Barba.js</b>.
-          </p>
+<main data-barba="container" data-barba-namespace="index" data-title="Intro">
 
-          <p>
-            I'm no expert in Barba so if you see something that is way off,
-            errors or typo's, let me know and I will get those fixed.
-            This guide is a result of my own learning and it is not meant to be anything remotely official or in-depth.
-          </p>
-        </section>
+<div class="container">
+    <header class="pb-3">
+        <!-- start row -->
+        <div class="row ">
+            <div class="col-12">
+                <nav>
+                    <ul class="navigation">
+                        <li><a href="">>_Catch your <br> Risk profile</a></li>
+                        <li><a href="">>_Data usage</a></li>
+                        <li><a href="">>_About</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- end row -->
+    </header>
+</div>
 
-        <section class="index__section">
-          <h2>How to Use</h2>
-          <p>
-            You'll need to have <b>node</b> and <b>npm</b> installed on your system to make this work.
-            There is plenty of documentation to help get this setup on your machine by searching for it.
-            This guide will use <a href="https://greensock.com/">GSAP</a> also known as <b>Greensock</b> for doing the animations.
-            You can also use <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Animations/Using_CSS_animations">CSS Animations</a>.
-            Look at the <a href="/resources.html">resources</a> for more information and learning materials.
-          </p>
-          <p>
-            This guide is arranged with git branches, because that is how I put this together.
-            You will need to understand how to <a href="https://www.atlassian.com/git/tutorials/using-branches/git-checkout">checkout git branches</a>.
-            As you checkout each branch you can see the code in your editor to follow along.
-          </p>
-          <ol>
-            <li>
-              Dowload or Clone from <a href="https://github.com/telagraphic/barba-page-transitions-guide">repo</a>.
-            </li>
-            <li>
-              Run <b>npm install</b> in your terminal to install dependencies.
-            </li>
-            <li>
-              Run <b>git checkout &lt;branch-name&gt;</b> to go to the lesson, run <b>git branch</b> to see all branches.
-            </li>
-            <li>
-              Run <b>npm run server</b> to start the local dev server and open it up in your browser!
-            </li>
-          </ol>
-        </section>
-      </article>
-    </main>
-  </section>
 
-  <footer class="footer">
-    <section class="footer__section">
-      <p>
-        Made with the <a href="https://github.com/dracula/dracula-theme/">Dracula Theme</a>.
-      </p>
-      <p>
-        Not responsive for mobile, use your laptop/desktop for reading this guide.
-      </p>
-      <p>
-        <a href="https://twitter.com/telagraphic">@telagraphic</a>
-      </p>
-    </section>
-  </footer>
 
-  <!-- Fathom - simple website analytics - https://usefathom.com -->
-  <script>
-    (function(f, a, t, h, o, m) {
-      a[h] = a[h] || function() {
-        (a[h].q = a[h].q || []).push(arguments)
-      };
-      o = f.createElement('script'),
-        m = f.getElementsByTagName('script')[0];
-      o.async = 1;
-      o.src = t;
-      o.id = 'fathom-script';
-      m.parentNode.insertBefore(o, m)
-    })(document, window, 'https://cdn.usefathom.com/tracker.js', 'fathom');
-    fathom('set', 'siteId', 'BSOEXRWG');
-    fathom('trackPageview');
-  </script>
-  <!-- / Fathom -->
+
+        <article class="index page">
+            <section class="index__section">
+                <!-- start container -->
+                <div class="container d-flex">
+
+                    <!-- start row -->
+                    <div class="row ">
+
+                        <!-- start column 1 -->
+                        <div class="col-6  justify-content-center align-self-center">
+
+                            <fieldset class="box-border">
+                                <legend class="box-border">>_INTRODUCTION</legend>
+                                <div class="content">
+                                    <p>
+                                        Catch your risk profile is a application that creates a risk profile based on
+                                        your facial features.
+                                        The risk profile will reveal how likely you will commit a particular crime based
+                                        on machine learning algorithms and historical crime data.
+                                        The tool is one example of a predictive policing tool what could potentially be
+                                        deployed by police in the near future by analyzing real-time surveillance
+                                        cameras in the public space.
+                                        <br><br>
+                                        NOTE: By using the tool you automatically agree to the privacy policy.
+                                    </p>
+                                    <a class="cta" href="">catch your risk profile</a>
+                                </div>
+                            </fieldset>
+
+                        </div>
+                        <!-- end column 1 -->
+
+                        <!-- start column 2 -->
+                        <div class="col-2">
+
+                        </div>
+                        <!-- end column 2 -->
+
+                        <!-- start column 3 -->
+                        <div class="col-4  justify-content-center align-self-center">
+                            <figure class="pt-5">
+                                <img src="/img/Moshed_face.png" alt="gif">
+
+                            </figure>
+                        </div>
+                        <!-- end column 3 -->
+
+                    </div>
+                    <!-- end row -->
+
+                </div>
+                <!-- End container -->
+
+            </section>
+        </article>
+
+
+</main>
+
+<footer>
+    <footer>
+        <div id="bar">
+            <ul id="progressbar">
+                <li class="active" id="step1"><a href="index.html">INTRODUCTION</a> </li>
+                <li id="step2"><a href="analyzer.html"> RISK PROFILE</a></li>
+                <li id="step3"><a href=""> Step 3</a></li>
+                <li id="step4"><a href=""> Step 4</a></li>
+            </ul>
+        </div>
+    </footer>
+</footer>
+
+
 </body>
 
+
+<!-- load webcam -->
+<script src="js/webcam.min.js"></script>
+
+<!-- face detection -->
+<script src="js/detect.js"></script>
+
+<!-- barbare page transitions -->
 <script src="js/barba.core.js"></script>
 <script src="js/gsap.min.js"></script>
-<script src="js/app.js"></script>
+
+<!-- project script -->
+<script async src="js/app.js"></script>
+
 
 </html>
