--- a/views/resources.html
+++ b/views/resources.html
@@ -8,72 +8,32 @@
 
   <link rel="stylesheet" href="css/styles.css">
 
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script defer src="js/face-api.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/kairos.js"></script>
 
-  <link rel="preload" href="fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/Inter-Medium.woff2" as="font" type="font/woff2" crossorigin>
-
-  <style>
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Thin.woff2') format('woff2'), url('fonts/Inter-Thin.woff') format('woff');
-      font-display: swap;
-      font-weight: 100;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Light.woff2') format('woff2'), url('fonts/Inter-Light.woff') format('woff');
-      font-display: swap;
-      font-weight: 300;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Regular.woff2') format('woff2'), url('fonts/Inter-Regular.woff') format('woff');
-      font-display: swap;
-      font-weight: 500;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Medium.woff2') format('woff2'), url('fonts/Inter-Medium.woff') format('woff');
-      font-display: swap;
-      font-weight: 600;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Bold.woff2') format('woff2'), url('fonts/Inter-Bold.woff') format('woff');
-      font-display: swap;
-      font-weight: 700;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-ExtraBold.woff2') format('woff2'), url('fonts/Inter-ExtraBold.woff') format('woff');
-      font-display: swap;
-      font-weight: 800;
-    }
-
-    @font-face {
-      font-family: "Inter";
-      src: url('fonts/Inter-Black.woff2') format('woff2'), url('fonts/Inter-Black.woff') format('woff');
-      font-display: swap;
-      font-weight: 900;
-    }
-  </style>
 </head>
 
-<body>
+
+<section class="analyzer__section">
+
+  <div id="my_camera"></div>
+  <div id="kairos_response" class="col-lg-6"
+       style="padding:10px;border:1px solid rgba(51, 51, 51, 0.08);background-color:
+               rgba(204, 204, 204, 0.26);color:#fff;"><i>(Response will appear here)</i></div>
+
+
+</section>
+
+
+<body class="page">
   <header class="header">
     <section class="github-button-section">
-      <a class="github-button" href="https://github.com/telagraphic/page-transitions" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star telagraphic/page-transitions on GitHub">Star</a>
-      <a class="docs" href="https://barba.js.org/docs/getstarted/intro/" target="_blank">Docs</a>
+
     </section>
     <nav>
       <a href="index.html">Home</a>
-      <a href="guide.html">Guide</a>
+      <a href="analyzer.html">Analyzer</a>
       <a href="resources.html">Resources</a>
     </nav>
   </header>
@@ -81,111 +41,11 @@
   <section data-barba="wrapper">
     <main data-barba="container" data-barba-namespace="resources" data-title="resources">
       <article class="resources page">
-        <section class="resources__section">
-          <section class="resources__section-content">
-            <h2>Learning Resources</h2>
-            <ul>
-              <li>
-                <a href="https://github.com/barbajs/barba">Barba.js Repo</a>
-              </li>
-              <li>
-                <a href="https://barba.js.org/docs/getstarted/intro/">Barba.js Docs</a>
-              </li>
-              <li>
-                <a href="https://www.superhi.com/courses/smooth-page-transitions-effects">SuperHi Course</a>
-              </li>
-              <li>
-                <a href="https://github.com/karanmhatre1/barba-page-transition-example">karanmhatre1 Github Repo Example</a>
-              </li>
-            </ul>
-          </section>
-        </section>
-
-        <section class="resources__section">
-          <section class="resources__section-content">
-            <h2>Animation Tools</h2>
-            <ul>
-              <p>
-                Before learning how to setup and use animations in your code, take a step back and consider
-                <a href="https://uxdesign.cc/motion-in-ux-design-9-points-to-get-started-e891974dc7ee">when and where to implement them</a>.
-                Think about how <a href="https://uxdesign.cc/the-ultimate-guide-to-proper-use-of-animation-in-ux-10bd98614fa9">they interplay with UX</a>.
-                Imagine all the possibilities of how they can <a href="https://medium.com/google-design/motion-design-doesnt-have-to-be-hard-33089196e6c2">fit into your interface designs</a>
-                and <a href="https://uxdesign.cc/good-to-great-ui-animation-tips-7850805c12e5">create eye-catching microinteractions</a>.
-              </p>
-              <li>
-                <a href="https://keyframes.app/">Keyframes</a>
-              </li>
-              <li>
-                <a href="https://animista.net/">Animista</a>
-              </li>
-              <li>
-                <a href="https://cubic-bezier.com/">Cubic Bezier</a>
-              </li>
-              <li>
-                <a href="https://easings.netlify.com/">Easings Visualized</a>
-              </li>
-              <li>
-                <a href="https://easings.net/en">Easings.net</a>
-              </li>
-              <li>
-                <a href="http://devtoolschallenger.com/">DevTools Challenger: Learn Firefox Devtools for Animation</a>
-              </li>
-            </ul>
-          </section>
-        </section>
 
         <section class="resources__section">
           <section class="resources__section-content">
             <h2>Endless Reading</h2>
-            <ul>
-              <li>
-                <a href="https://3dtransforms.desandro.com/">3D Transforms Overview</a>
-              </li>
-              <li>
-                <a href="https://tympanus.net/codrops/2019/11/14/the-new-features-of-gsap-3/">GSAP 3: New Features</a>
-              </li>
-              <li>
-                <a href="https://tympanus.net/codrops/">Codrops.com</a>
-              </li>
-              <li>
-                <a href="https://www.smashingmagazine.com/2016/07/improving-user-flow-through-page-transitions/">Improving User Flow Through Page Transitions</a>
-              </li>
-            </ul>
-          </section>
-        </section>
 
-        <section class="resources__section">
-          <section class="resources__section-content">
-            <h2>And Watching</h2>
-            <ul>
-              <li>
-                <a href="https://www.superhi.com/courses/smooth-page-transitions-effects">SuperHi Course</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=YYlFFMc0RAg">Kevin Powell: Animating with Transitions</a>
-              </li>
-              <li>
-                <a href="https://www.creativecodingclub.com/bundles/creative-coding-club">GSAP Courses at Creative Coding Club</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=L5L3yZotxxU&t=334s">Wipe Effect</a>
-              </li>
-              <li>
-                <a href="https://cubic-bezier.com/">Waterfall Effect</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=ergc889Jghc">Page Transitions</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=ergc889Jghc">DesignCourse: Sick Page Transitions</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/channel/UCFPckx3BFK_GvJag82CjDlg">GSAP Youtube Channel</a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=90QvQ3p6brk&list=PL478wQWRhpfZA85XA9eDWVTs1w2mCNZkV">Kirupa CSS Animations Playlist</a>
-              </li>
-            </ul>
           </section>
         </section>
       </article>
@@ -204,8 +64,14 @@
   </footer>
 </body>
 
+
+<script src="js/webcam.min.js"></script>
+<script src="js/detect.js"></script>
+
 <script src="js/barba.core.js"></script>
 <script src="js/gsap.min.js"></script>
-<script src="js/app.js"></script>
+<script async type=module src="js/app.js"></script>
+
+
 
 </html>
