--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -11,7 +11,7 @@ $white-b: #fff;
 
 // Risk-PROFILE COLOR THEME
 $red: #FF1313;
-$white: #fff;
+$white: rgba(255, 255, 255, 0.61);
 $blue: #0066FF;
 $darkblue: #0500FF;
 $pink: #FF11D9;
