--- a/scss/globals/_header.scss
+++ b/scss/globals/_header.scss
@@ -14,7 +14,8 @@ nav .navigation{
   justify-content: flex-end;
   list-style:none;
   margin: 0;
-  padding: 1rem;
+  padding: 2rem 0rem;
+  overflow: hidden;
 }
 
 nav .navigation li a{
@@ -34,8 +35,8 @@ nav .navigation li{
 }
 
 
-nav .navigation li{
-
+nav .navigation li a{
+  color: rgba(255,255,255,1);
 }
 
 
@@ -44,3 +45,10 @@ nav .navigation li:first-child {
   margin-left: 0;
   margin-right: auto;
 }
+
+
+nav .navigation li:hover{
+  border-bottom:2px inset $darkblue;
+  position: relative;
+}
+
