--- a/views/index.html
+++ b/views/index.html
@@ -58,7 +58,7 @@
                     <div class="row">
 
                         <!-- start column 1 -->
-                        <div class="col-6  justify-content-center align-self-center">
+                        <div class="col-5  justify-content-center align-self-center">
 
                             <fieldset class="box-border">
                                 <legend class="box-border">>_INTRODUCTION</legend>
@@ -72,9 +72,9 @@
                                         deployed by police in the near future by analyzing real-time surveillance
                                         cameras in the public space.
                                         <br><br>
-                                        NOTE: By using the tool you automatically agree to the privacy policy.
+                                        NOTE:<br> By using the tool you automatically agree to the privacy policy.
                                     </p>
-                                    <a class="cta" href="">catch your risk profile</a>
+                                    <a class="cta" href="analyzer.html">catch your risk profile</a>
                                 </div>
                             </fieldset>
 
@@ -82,7 +82,7 @@
                         <!-- end column 1 -->
 
                         <!-- start column 2 -->
-                        <div class="col-2">
+                        <div class="col-3">
 
                         </div>
                         <!-- end column 2 -->
@@ -90,7 +90,7 @@
                         <!-- start column 3 -->
                         <div class="col-4  justify-content-center align-self-center">
                             <figure class="pt-5">
-                                <img src="/img/Moshed_face.png" alt="gif">
+                                <img src="/img/Moshed_face.gif" alt="gif">
                             </figure>
                         </div>
                         <!-- end column 3 -->
