--- a/scss/globals/_footer.scss
+++ b/scss/globals/_footer.scss
@@ -19,10 +19,12 @@ footer{
 }
 
 #progressbar li a{
-  color: $white;
+  color: rgba(255, 255, 255, 0.5);
   font-family: IBM-Medium;
   font-size: 0.875rem;
   text-decoration: none;
+  text-transform: uppercase;
+
 }
 
 #progressbar {
@@ -34,8 +36,8 @@ footer{
 
 }
 
-#progressbar .active {
-  color: $white;
+#progressbar .active a {
+  color: rgba(255, 255, 255, 1);
 }
 
 #progressbar li {
